--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </header>
 
 <article>
-      <center><img src="images/Irizarry_Nota Propia 1_5.jpg" width="700" height="450"></center>
+      <center><img src="claudiairizarry.github.io/Irizarry_Nota Propia 1_5.jpg" width="700" height="450"></center>
 
       <p>
         <p class="colortext">
@@ -39,14 +39,14 @@
 
     <div class="img-wrapper">
         <figure>
-            <img src="images/IRIZARRY_Nota Propia 1_3.JPG" width="250" height="150">
+            <img src="claudiairizarry.github.io/IRIZARRY_Nota Propia 1_3.JPG" width="250" height="150">
             <figcaption>Momentos de euforia y tensión durante la reunión de rendición de cuentas del distrito 12 de Manhattan el pasado domingo 15 de octubre. </figcaption>
         </figure>
         <figure>
-            <img src="images/IRIZARRY_Nota Propia 1_1.jpg" width="250" height="150">
+            <img src="claudiairizarry.github.io/IRIZARRY_Nota Propia 1_1.jpg" width="250" height="150">
             <figcaption>El interior de la biblioteca de Inwood.</figcaption>
         </figure>
-        <figure><img src="images/Irizarry_Nota Propia 1_6.jpg" width="250" height="150">
+        <figure><img src="claudiairizarry.github.io/Irizarry_Nota Propia 1_6.jpg" width="250" height="150">
             <figcaption>El Congresista Adriano Espaillat (D-NY) se dirige hacia los activistas.</figcaption>
         </figure>
     </div>
@@ -60,7 +60,7 @@
 
     <figure>
     <center>
-        <img src="images/Inwood_facts.png" width="600" height="250">
+        <img src="claudiairizarry.github.io/Inwood_facts.png" width="600" height="250">
         <figcaption>Fuente: <a href="https://nycfuture.org/data/nyc-libraries-by-the-numbers">NYC Center for Urban Future</a></figcaption>
     </center>
     </figure>
@@ -112,10 +112,10 @@
     <footer>
       <h2><center> Send love letters and advice</center></h2></footer>
       <center><p>Email me at <a href="mailto:clau.irizarry@gmail.com">clau.irizarry@gmail.com</a> or find me around the web!</p>
-      <a href="https://twitter.com/clauuia"><img src="images/twitter.png"></a>
-      <a href="https://facebook.com/claudia.elena1"><img src="images/facebook.png"></a>
-      <a href="https://instagram.com/clauuia"><img src="images/instagram-4-512.png" width="128" height="128"></a>
-      <a href="https://linkedin.com/in/claudiairizarryaponte"><img src="images/linkedin.png"></a></center></p class>
+      <a href="https://twitter.com/clauuia"><img src="claudiairizarry.github.io/twitter.png"></a>
+      <a href="https://facebook.com/claudia.elena1"><img src="claudiairizarry.github.io/facebook.png"></a>
+      <a href="https://instagram.com/clauuia"><img src="claudiairizarry.github.ioinstagram-4-512.png" width="128" height="128"></a>
+      <a href="https://linkedin.com/in/claudiairizarryaponte"><img src="claudiairizarry.github.io/linkedin.png"></a></center></p class>
 
   </body>
 </html>
