--- a/powertopuertorico.html
+++ b/powertopuertorico.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<!--HEADER - REMINDERS: Find a new photo for the header.-->
+<!--HEADER-->
 
   <header>
     <h3 class="date">December 01, 2017</h3>
