--- a/powertopuertorico.html
+++ b/powertopuertorico.html
@@ -38,8 +38,8 @@
 </body> 
 <!-- footer & contact info -->
     <footer>
-      <h2><center> Send love letters and advice</center></h2>
-      <center>Email me at <a href="mailto:clau.irizarry@gmail.com">clau.irizarry@gmail.com</a> or find me around the web!
+      <h2><center> Send love letters and advice</h2>
+      Email me at <a href="mailto:clau.irizarry@gmail.com">clau.irizarry@gmail.com</a> or find me around the web!
       <a href="https://twitter.com/clauuia"><img src="claudiairizarry.github.io/twitter.png"></a>
       <a href="https://facebook.com/claudia.elena1"><img src="claudiairizarry.github.io/facebook.png"></a>
       <a href="https://instagram.com/clauuia"><img src="claudiairizarry.github.io/instagram-4-512.png" width="128" height="128"></a>
