--- a/powertopuertorico.html
+++ b/powertopuertorico.html
@@ -38,12 +38,14 @@
 </body> 
 <!-- footer & contact info -->
     <footer>
-      <h2><center> Send love letters and advice</h2>
+     <center>
+      <h2>Send love letters and advice</h2>
       <h1>Email me at <a href="mailto:clau.irizarry@gmail.com">clau.irizarry@gmail.com</a> or find me around the web!</h1>
       <a href="https://twitter.com/clauuia"><img src="claudiairizarry.github.io/twitter.png"></a>
       <a href="https://facebook.com/claudia.elena1"><img src="claudiairizarry.github.io/facebook.png"></a>
       <a href="https://instagram.com/clauuia"><img src="claudiairizarry.github.io/instagram-4-512.png" width="128" height="128"></a>
-      <a href="https://linkedin.com/in/claudiairizarryaponte"><img src="claudiairizarry.github.io/linkedin.png"></a></center>
+      <a href="https://linkedin.com/in/claudiairizarryaponte"><img src="claudiairizarry.github.io/linkedin.png"></a>
+     </center>
   </footer>
 
 </html>
