--- a/mapstory.html
+++ b/mapstory.html
@@ -37,10 +37,10 @@
      <center>
       Send love letters and advice
       <h3>Email me at <a href="mailto:clau.irizarry@gmail.com">clau.irizarry@gmail.com</a> or find me around the web!</h3>
-      <a href="https://twitter.com/clauuia"><img src="images/twitter.png"></a>
-      <a href="https://facebook.com/claudia.elena1"><img src="images/facebook.png"></a>
-      <a href="https://instagram.com/clauuia"><img src="images/instagram-4-512.png" width="128" height="128"></a>
-      <a href="https://linkedin.com/in/claudiairizarryaponte"><img src="images/linkedin.png"></a>
+      <a href="https://twitter.com/clauuia"><img src="claudiairizarry.github.io/twitter.png"></a>
+      <a href="https://facebook.com/claudia.elena1"><img src="claudiairizarry.github.io/facebook.png"></a>
+      <a href="https://instagram.com/clauuia"><img src="claudiairizarry.github.io/instagram-4-512.png" width="128" height="128"></a>
+      <a href="https://linkedin.com/in/claudiairizarryaponte"><img src="claudiairizarry.github.io/linkedin.png"></a>
      </center>
   </footer>
 
